[gd_scene load_steps=4 format=2]

[ext_resource path="res://Entities/Interface/Store/SkillStoreElement.gd" type="Script" id=1]
[ext_resource path="res://Graphics/GUI/free sample 32 x 32.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]

resource_local_to_scene = true
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[node name="SkillStoreElement" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 800.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )
color = Color( 1, 1, 1, 0 )

[node name="SkillInfo" type="HBoxContainer" parent="."]
margin_top = 14.0
margin_right = 800.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="SkillInfo"]
margin_right = 10.0
margin_bottom = 586.0
rect_min_size = Vector2( 10, 0 )
color = Color( 1, 1, 1, 0 )

[node name="Info" type="VBoxContainer" parent="SkillInfo"]
editor/display_folded = true
margin_left = 14.0
margin_right = 267.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="HBoxContainer" parent="SkillInfo/Info"]
margin_right = 253.0
margin_bottom = 50.0

[node name="VBoxContainer" type="VBoxContainer" parent="SkillInfo/Info/VBoxContainer"]
margin_right = 186.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="Name" type="Label" parent="SkillInfo/Info/VBoxContainer/VBoxContainer"]
margin_right = 186.0
margin_bottom = 14.0
text = "Fireball"

[node name="Texture" type="TextureRect" parent="SkillInfo/Info/VBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 32.0
margin_bottom = 50.0
rect_clip_content = true
size_flags_horizontal = 2
size_flags_vertical = 2
texture = SubResource( 1 )
stretch_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="SkillInfo/Info/VBoxContainer"]
margin_left = 190.0
margin_right = 253.0
margin_bottom = 50.0

[node name="Gold" type="Label" parent="SkillInfo/Info/VBoxContainer/VBoxContainer2"]
margin_right = 63.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.960784, 0.964706, 0.2, 1 )
text = "40 Gold"

[node name="Level" type="Label" parent="SkillInfo/Info/VBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 63.0
margin_bottom = 32.0
text = "Level: 0/0"

[node name="Buy" type="Button" parent="SkillInfo/Info"]
margin_top = 54.0
margin_right = 253.0
margin_bottom = 586.0
size_flags_vertical = 3
text = "Buy"

[node name="VSeparator" type="VSeparator" parent="SkillInfo"]
margin_left = 271.0
margin_right = 275.0
margin_bottom = 586.0

[node name="DescriptionContainer" type="Container" parent="SkillInfo"]
margin_left = 279.0
margin_right = 785.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="SkillDescription" type="RichTextLabel" parent="SkillInfo/DescriptionContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
bbcode_enabled = true

[node name="ColorRect2" type="ColorRect" parent="SkillInfo"]
margin_left = 789.0
margin_right = 799.0
margin_bottom = 586.0
rect_min_size = Vector2( 10, 0 )
color = Color( 1, 1, 1, 0 )

[connection signal="pressed" from="SkillInfo/Info/Buy" to="." method="_on_Buy_pressed"]
